# geo-prox-rs

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml
benches/: chord_bound.rs
src/: lib.rs
tests/: grid_test.rs
