[package]
name = "geo-prox"
version = "0.1.0"
edition = "2021"
description = "A really simple rust library that tells whether two GPS points are close to each other"
readme = "README.md"
license = "MIT"

[dependencies]
geo = { version = "0.31.0", optional = true }
geo-types = "0.7.17"

[dev-dependencies]
geo = "0.31.0"

[features]
default = []
# This feature enables fallback exact geodesic distance computation when the
# chord distance bound is too loose.
geo = ["dep:geo"]

[[test]]
name = "grid_test"
